# ai-email-triage

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  cli.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: .project_structure_ignore  project_structure_filtered.txt
tests/: test_cli.py  test_embedding.py  test_hash_cache.py  test_heuristics.py  test_imap_reader.py  test_llm_fallback.py  test_parser.py
triage/: cli.py
triage/cli/: __init__.py  exceptions.py
triage/config/: app_config.py  rules.yaml
triage/core/: base.py  categories.py  embedding.py  embedding_store.py  engine.py  hash_cache.py  heuristics.py  llm_fallback.py  pipeline.py  rules_loader.py  scoring.py
triage/data/: classification_store.py  embedding_store.py  processed_store.py
triage/e_mail/: imap_reader.py
triage/email/: imap_reader.py  models.py  parser.py
triage/embedder/: model.py
triage/embeddings/: model.py
triage/examples/: bank_invoice.eml  conta-digital-vivo.eml  newsletter.eml  partnership_request.eml  security_alert.eml
triage/llm/: classifier.py  ollama_client.py
triage/tests/: main.py  test_imap_reader.py
triage/tools/: export_eml.py
